minor edit to css background path to fix background image not showing up after moving CSS stylesheet.

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -61,7 +61,7 @@ html, body {
 /* need for attempted sticky footer */
 body{
 
-    background-image: url(./Assets/Images/Hawaii2019_BackgroundResponsivePortfolio.jpg);
+    background-image: url("../Images/Hawaii2019_BackgroundResponsivePortfolio.jpg");
     background-attachment: fixed;
     background-size: cover;
     display: flex;
